# NeoTopology

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: push_pypi.yaml  test.yml
src/ttk/: __init__.py  topology.py
src/ttk/calculator/: __init__.py  aligned_rmsd.py  dimer.py
src/ttk/core/: AGENTS.md  __init__.py  atom.py  bond.py  chain.py  element.py  entity.py  residue.py  unit_cell.py
src/ttk/data/: __init__.py
src/ttk/io/: AGENTS.md  PDBFile.py  PDBUtil.py  PDBxParser.py  __init__.py  align.py  residue_export.py  topology_export.py  topology_parser.py  visualize.py
src/ttk/math/: __init__.py  rotation.py
src/ttk/utils/: sequence.py
tests/: test_calculator.py  test_core.py  test_math.py  test_topology.py  test_topology_export.py  test_topology_parser.py
ttk/: Topology.py  __init__.py
ttk/core/: residue.py
ttk/math/: __init__.py
