[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoTopology"
authors = [
  { name="huyilang"},
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "mendeleev",
  "pint",
  "rdkit",
  "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.dynamic]
version = {attr = "ttk.__version__"}


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/NeoBinder/NeoTopology"
Issues = "https://github.com/NeoBinder/NeoTopology/issues"
