[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoTopology"
authors = [
  { name="huyilang"},
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mendeleev",
  "pint",
  "rdkit",
  "numpy",
  "pytest>=7.4.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.dynamic]
version = {attr = "ttk.__version__"}


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/NeoBinder/NeoTopology"
Issues = "https://github.com/NeoBinder/NeoTopology/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
# 指定目标 Python 版本
target-version = "py312"

# Maximum line length
line-length = 100

# Exclude files and directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enabled rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# Disabled rules
ignore = [
    "E501",   # line too long (handled by line-length)
    "B008",   # do not perform function calls in default arguments
    "ARG001", # unused function argument
    "SIM108", # use ternary operator (may reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["ttk"]

[tool.ruff.lint.per-file-ignores]
# Test files may use assert
"tests/*" = ["S101"]
# __init__.py files re-export symbols for the public API;
# import order is intentional to avoid circular-import issues.
"**/__init__.py" = ["F401", "E402", "I001"]

[tool.mypy]
# 指定目标 Python 版本
python_version = "3.12"

# 报告未使用的导入
warn_unused_ignores = true

# 排除的文件
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

# 严格性选项
strict = false
warn_return_any = true
warn_unused_configs = true

# 禁用特定的错误检查
[[tool.mypy.overrides]]
module = "mendeleev.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openmm.*"
ignore_missing_imports = true
